test/tests/compiler/16_characters_and_strings/invalid_types/plx1_string_is_not_char.plx
pub fn main(none) i32 {
    str: string = 'x'
    return 0
}
